@@ -203,6 +203,7 @@ INSERT INTO "oneoffcast_podcast" VALUES(8, 'PodTech News - powered by PodTech.ne
 INSERT INTO "oneoffcast_podcast" VALUES(9, 'web 2.0 - powered by PodTech.net', '- powered by PodTech.net', 'http://www.podtech.net/home/category/web+2.0', 'http://www.podtech.net/home/web+2.0/feed', '2006-10-29 08:03:08.562797', '', '', '', 1);
 INSERT INTO "oneoffcast_podcast" VALUES(10, 'LOCAL web 2.0 - powered by PodTech.net', '- powered by PodTech.net', 'http://www.podtech.net/home/category/web+2.0', 'http://localhost/~dhellmann/OneOffCast/web20.xml', '2006-10-29 08:15:56.814293', '', '', '', 1);
 INSERT INTO "oneoffcast_podcast" VALUES(11, 'Amateur Traveler Podcast | travel for the love of it', 'Travel for the love of it: travel stories, news, tips, tricks and resources', 'http://AmateurTraveler.com/', 'http://feeds.feedburner.com/AmateurTravelerPodcast', '2006-11-04 08:56:20.950751', '', '', '', 1);
+INSERT INTO "oneoffcast_podcast" VALUES(12, 'Barnes & Noble''s Meet the Writers Podcast', 'Hear the latest word on today''s hottest authors with Barnes & Noble''s exclusive Meet the Writers Podcast. Listen as your favorite writers discuss their inspirations and influences, their favorite books, and the reasons they write.', 'http://www.barnesandnoble.com/writers', 'http://www.bn.com/rss/mtw.xml', '2006-11-04 10:35:20.362405', '', '', '', 1);
 CREATE TABLE "oneoffcast_podcast_users" (
     "id" integer NOT NULL PRIMARY KEY,
     "podcast_id" integer NOT NULL REFERENCES "oneoffcast_podcast" ("id"),
@@ -219,6 +220,7 @@ INSERT INTO "oneoffcast_podcast_users" VALUES(8, 8, 1);
 INSERT INTO "oneoffcast_podcast_users" VALUES(9, 9, 1);
 INSERT INTO "oneoffcast_podcast_users" VALUES(10, 10, 1);
 INSERT INTO "oneoffcast_podcast_users" VALUES(11, 11, 1);
+INSERT INTO "oneoffcast_podcast_users" VALUES(12, 12, 1);
 CREATE TABLE "oneoffcast_queueitem" (
     "id" integer NOT NULL PRIMARY KEY,
     "user_id" integer NOT NULL REFERENCES "auth_user" ("id"),
@@ -233,16 +235,5 @@ CREATE TABLE "oneoffcast_queueitem" (
     "author_name" varchar(128) NOT NULL,
     "author_email" varchar(75) NOT NULL
 );
-INSERT INTO "oneoffcast_queueitem" VALUES(1, 1, 3, 'Agile06 - Ward Cunningham - Eclipse Foundation', 'Ward and I talk about his new position as the Director of Committer Community Development at Eclipse.  He discusses the release of Callisto by the Eclipse foundation, itâs Agile roots and other fun tool related topics.-bob', 'http://agiletoolkit.libsyn.com/index.php?post_id=131922', 'http://media.libsyn.com/media/agiletoolkit/Agile2006_WardCunningham.mp3', 11623852, 'audio/mpeg', '2006-10-28 13:46:13.047197', 'Bob Payne', 'n/a');
-INSERT INTO "oneoffcast_queueitem" VALUES(2, 1, 3, 'Agile06 - Mary Lynn Manns - Fearless Chage and Agile 2007', 'Mary Lynn is the co author of Fearless Change and the Chair of the Agile 2007 Conference here in Washington DC.  What can I say ... the book is great and I look forward to working with her on Agile 2007.I did not get as much time to talk with her at the conference as I would have liked since she was swamped.  - bob ', 'http://agiletoolkit.libsyn.com/index.php?post_id=129015', 'http://media.libsyn.com/media/agiletoolkit/Agile2006_MaryLynnManns.mp3', 6550643, 'audio/mpeg', '2006-10-28 13:46:25.855880', 'Bob Payne', 'n/a');
-INSERT INTO "oneoffcast_queueitem" VALUES(3, 1, 7, 'Pre-conference podcast - Hugh MacLeod', 'Download audio file (hugh_macleod_podcast.mp3)
-Podcast length - 31:22
-Welcome to the IT@Cork pre-conference PR podcasts. In this podcast series, kindly sponsored by Blacknight Solutions, we are talking to some of the speakers in the upcoming 2006 IT@Cork Business and Technology conference.
-In this podcast, second in the series we are talking to Hugh MacLeod. Hugh is a blogger, [...]', 'http://blog.itcork.ie/pre-conference-podcast-hugh-macleod/', 'http://www.podtrac.com/pts/redirect.mp3?http://podcasts.tomrafteryit.net/hugh_macleod_podcast.mp3', 15058647, 'audio/mpeg', '2006-10-28 13:51:29.902883', 'IT@Cork', 'tom@tomrafteryit.net');
-INSERT INTO "oneoffcast_queueitem" VALUES(4, 1, 6, 'Angel Money', 'Jeff Clavier, the founder of SoftTech VC, talks about his experiences as an angel investor in social media, search, and discovery startups. As we continue our series of interviews about the different states of startup investing, Clavier provides insight into angel investing, and its impact on the rest of the venture funding landscape', 'http://www.businessweek.com/mediacenter/qt/podcasts/podcasting/podcastbiz_10_04_06.mp3', 'http://www.businessweek.com/mediacenter/qt/podcasts/podcasting/podcastbiz_10_04_06.mp3', 7019212, 'audio/mpeg', '2006-10-28 13:52:07.596342', 'Jeff Clavier', 'n/a');
-INSERT INTO "oneoffcast_queueitem" VALUES(5, 1, 6, 'New Valuations', 'Fred Wilson and Brad Burnham, the founders of Union Square Ventures in New York, talk about how the new economics of starting and running companies is creating a new way of valuing startups. They also discuss what needs to happen for enterprises to adopt this new generation of technology and why it''s important to be careful these days about the kinds of companies in which they invest', 'http://www.businessweek.com/mediacenter/qt/podcasts/podcasting/podcastbiz_09_27_06.mp3', 'http://www.businessweek.com/mediacenter/qt/podcasts/podcasting/podcastbiz_09_27_06.mp3', 7697277, 'audio/mpeg', '2006-10-28 13:52:11.640682', 'Brad Burnham & Fred Wilson', 'n/a');
-INSERT INTO "oneoffcast_queueitem" VALUES(6, 1, 8, 'PodTech Weekly', 'From PodTech News, a closer look at Internet addiction, the all-important price of admission for next year''s gaming consoles, the FBI''s electronic eyes and who they''re watching, and a check-in with JibJab.', 'http://www.podtech.net/home/technology/1383/podtech-weekly', 'http://media.podtech.net/media/2006/10/PID_001287/Podtech_PodTech_News_Weekly_1.mp3', 27237925, 'audio/mpeg', '2006-10-28 13:53:20.213699', 'Editor', 'n/a');
-INSERT INTO "oneoffcast_queueitem" VALUES(7, 1, 10, 'BlueDot, Share your favorite sites with your friends', 'Mike Arrington at TechCrunch says he uses BlueDot instead of other bookmarking for social Website sharing services. So, I headed up to Seattle to find out what was behind this innovative company. You’ll meet the entire team, get a demo, and more.', 'http://www.podtech.net/home/technology/1382/bluedot-share-your-favorite-sites-with-your-friends', 'http://media.podtech.net/media/2006/10/PID_001279/Podtech_bluedotvisit_350.mov', 90890592, 'video/mov', '2006-10-29 08:57:45.790780', 'Robert Scoble', 'n/a');
-INSERT INTO "oneoffcast_queueitem" VALUES(8, 1, 10, 'LunchMeet Gets Political with TheBallot.org', 'Eddie Codel and Irina Slutsky talk political tech with Seth Walker of Radical Designs on the newly launched voter guide site TheBallot.org. Seth tells us how individuals and groups can use TheBallot.org to create voter guides, endorsements and voter blocs to help get the vote out this election season.', 'http://www.podtech.net/home/technology/1376/lunchmeet-gets-political-with-theballotorg', 'http://media.podtech.net/media/2006/10/PID_001274/Podtech_LM2-TheBallot.mov', 53708204, 'video/mov', '2006-10-29 08:57:49.854932', 'Editor', 'n/a');
-INSERT INTO "oneoffcast_queueitem" VALUES(9, 1, 4, 'Getting Involved', 'The seasons are changing once again - here in the U.S. it''s election season. Are you sufficiently involved? Tom Steinberg of mySociety talks about some of the tools available in the U.K.. Too real for you? Jim Purbrick talks about creation and community in Second Life.(DTF 10-16-2006: 18 minutes, 40 seconds)', 'http://www.oreillynet.com/pub/a/network/2006/10/16/distributing-the-future.html', 'http://downloads.oreilly.com/network/2006/10/16/distributing-the-future-2006-10-16.mp3', 93337553, 'audio/mpeg', '2006-11-02 14:21:51.708936', 'Daniel H. Steinberg', 'webmaster@oreillynet.com');
+INSERT INTO "oneoffcast_queueitem" VALUES(11, 1, 12, 'Meet the Writers: Janet Fitch', 'The author of White Oleander tells how a rejection letter inspired her most acclaimed work, plus discussion of her new novel, Paint It Black.', 'http://www.barnesandnoble.com/writers', 'http://http.earthcache.net/htc-01.media.globix.net/COMP009996MOD1/Janet_Fitch.mp3', 0, 'audio/mpeg', '2006-11-04 10:41:23.880587', 'undefined', 'n/a');
 COMMIT;
