@@ -1,5 +1,8 @@
 2006-11-04  Doug Hellmann  <dhellmann@racemi.com>
 
+	* views.py (queue): Make sure we have an integer for the
+	item_enclosure_length.
+
 	* feeds.py (UserFeed.item_link): Add a method for item_link().
 
 	* models.py: Use the download_cache module to retrieve feed contents.
